
5.1.0 -> 5.2a0:
    - jbj: parser: inherit group/summary/description if not specified in subpkg.
    - jbj: parser: permit identically named sub-pkgs with different versions.
    - jbj: parser: trim comments where it makes sense to do so.
    - jbj: tests: add check-install target to attempt --relocate install.
    - jbj: tests: enhance the devtool-sanity package with scripts and a file.
    - jbj: tests: verify -Kv output using popt.
    - jbj: tests: verify setup using --version/--querytags/--showrc.
    - jbj: display noisy getconf()/uname() info with -vv --showrc instead.
    - jbj: shorten debugging messages, --queryformat strings passed to
	headerSprintf are getting huge.
    - jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
	(see --yum:primary.yaml spew for reproducer)
    - jbj: restore deploop diagnostic message (Kacper Kornet kornet@camk.edu.pl).
    - jbj: install rpmmtree.8, update POTFILES.in & Doxyfiles.in.
    - jbj: add %_build_iconsize macro to permit configuration.
    - jbj: trash-and-restore macro config for multiple CLI arg builds.
    - rpm.org: use same code for creating the digest object on iteration and method call,
    - jbj: rpmrepo: correct requiressqlentry tag name typo.
    - jbj: fix: handle '%{arch}\' with \ at end-of-string correctly.
    - jbj: tests: verify ref/* data using rpmdigest/rpmmtree.
    - jbj: move rpmdigest/rpmmtree/rpmrepo back to tools/ for installation.
    - jbj: tests: verify rpmrepo XML spewage using popt-1.14.
    - jbj: tests: verify XML/YAML markup queries using popt-1.14.
    - jbj: tests: download popt-1.14 packages for use in tests.
    - jbj: yaml: fix: single element string arrays had extra "- ".
    - jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
    - jbj: add expanded build scripts for --specsrpm --queryformat spewage.
    - jbj: update Russian PO file (from Translation Project).
    - jbj: rpmdb: fix: limit RUNRECOVERY attempts, not every lazy open.